--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   #- title: "Teaching"
   #  url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Research portfolio"
     url: /portfolio/
         
   #- title: "Blog Posts"
