--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ruchit's site"
+title                    : "Ruchit Mehta"
 title_separator          : "-"
 name                     : &name "Ruchit Mehta, Ph.D."
 description              : #&description "personal description"
